--- a/PDSH_Chapter2_IntroNumpy.ipynb
+++ b/PDSH_Chapter2_IntroNumpy.ipynb
@@ -281,6 +281,72 @@
       "metadata": {
         "id": "9B005zOb7s8x",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 108
+        },
+        "outputId": "4fe7610c-0a11-4e23-cf1d-54f6ed0931d6"
+      },
+      "cell_type": "code",
+      "source": [
+        "a1 = np.arange(0,20,2)\n",
+        "a2 = np.linspace(0,1,10)\n",
+        "a3 = np.random.random((2,2))\n",
+        "print(a1)\n",
+        "print(a2)\n",
+        "print(a3)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 0  2  4  6  8 10 12 14 16 18]\n",
+            "[0.         0.11111111 0.22222222 0.33333333 0.44444444 0.55555556\n",
+            " 0.66666667 0.77777778 0.88888889 1.        ]\n",
+            "[[0.02016667 0.31602479]\n",
+            " [0.21333237 0.49703173]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "zovVfQkW8Z8E",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "361249a5-2513-4f75-ef7f-2e96bd3f836a"
+      },
+      "cell_type": "code",
+      "source": [
+        "a1 = np.empty((2,5))\n",
+        "a1"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444],\n",
+              "       [0.55555556, 0.66666667, 0.77777778, 0.88888889, 1.        ]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hAkxzalo9HYG",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
