--- a/PDSH_Chapter2_IntroNumpy.ipynb
+++ b/PDSH_Chapter2_IntroNumpy.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +34,8 @@
       },
       "cell_type": "code",
       "source": [
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd"
       ],
       "execution_count": 0,
       "outputs": []
@@ -285,7 +287,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 108
         },
-        "outputId": "4fe7610c-0a11-4e23-cf1d-54f6ed0931d6"
+        "outputId": "f672f75f-3950-445a-f031-d3ae73aca0ad"
       },
       "cell_type": "code",
       "source": [
@@ -296,7 +298,7 @@
         "print(a2)\n",
         "print(a3)"
       ],
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,8 +306,8 @@
             "[ 0  2  4  6  8 10 12 14 16 18]\n",
             "[0.         0.11111111 0.22222222 0.33333333 0.44444444 0.55555556\n",
             " 0.66666667 0.77777778 0.88888889 1.        ]\n",
-            "[[0.02016667 0.31602479]\n",
-            " [0.21333237 0.49703173]]\n"
+            "[[0.88783903 0.22958263]\n",
+            " [0.30949465 0.35979547]]\n"
           ],
           "name": "stdout"
         }
@@ -319,14 +321,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "361249a5-2513-4f75-ef7f-2e96bd3f836a"
+        "outputId": "20a2549d-b6bc-423c-8f62-f62008b40a11"
       },
       "cell_type": "code",
       "source": [
         "a1 = np.empty((2,5))\n",
         "a1"
       ],
-      "execution_count": 14,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,13 +341,132 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 21
         }
       ]
     },
     {
       "metadata": {
         "id": "hAkxzalo9HYG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "badb3c95-af12-490a-dd46-c72e09ac7f09"
+      },
+      "cell_type": "code",
+      "source": [
+        "a1[0]"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.        , 0.11111111, 0.22222222, 0.33333333, 0.44444444])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2SNTxdiu-Vjv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "af30494d-2888-4da2-c1f5-3662d059d1a9"
+      },
+      "cell_type": "code",
+      "source": [
+        "a1[1,2]"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7777777777777777"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "0QKwj8yx-Zgu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "0246d727-67e8-49ca-ffe1-3a1efcadef05"
+      },
+      "cell_type": "code",
+      "source": [
+        "data = pd.read_csv('https://raw.githubusercontent.com/RCUELLO72/PythonDataScienceHandbook/master/president_heights.csv')\n",
+        "heights = data['height(cm)'].values\n",
+        "print(heights)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[189 170 189 163 183 171 185 168 173 183 173 173 175 178 183 193 178 173\n",
+            " 174 183 183 168 170 178 182 180 183 178 182 188 175 179 183 193 182 183\n",
+            " 177 185 188 188 182 185]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "3e7w09pyPnY6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ebf70385-a3d0-4d72-c705-4cb051f78262"
+      },
+      "cell_type": "code",
+      "source": [
+        "heights.max()"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "193"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ZrXrAwPNQ0A9",
         "colab_type": "code",
         "colab": {}
       },
